Add meal plan button and section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button data-tab="diet">Diet Log</button>
     <button data-tab="renpho">Renpho Log</button>
     <button data-tab="sleep">Sleep Log</button>
+        <button data-tab="meal-plan">Meal Plan</button>
     <button data-tab="summary">Summary</button>
   </nav>
 
@@ -29,7 +30,11 @@
     <section id="plan" class="tab-content active"></section>
     <section id="workout" class="tab-content"></section>
     <section id="diet" class="tab-content"></section>
-    <section id="renpho" class="tab-content"></section>
+      
+<section id="renpho" class="tab-content"></section>
+
+      <section id="meal-plan" class="tab-content"></section>
+
     <section id="sleep" class="tab-content"></section>
     <section id="summary" class="tab-content"></section>
   </main>
