--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button data-tab="meal-plan">Meal Plan</button>
     <button data-tab="summary">Summary</button>
   </nav>
+<button data-tab="progress">Progress</button>
 
   <!-- Content containers for each tab -->
   <main>
