--- a/index.html
+++ b/index.html
@@ -23,22 +23,29 @@
     <button data-tab="sleep">Sleep Log</button>
         <button data-tab="meal-plan">Meal Plan</button>
     <button data-tab="summary">Summary</button>
-  </nav>
-<button data-tab="progress">Progress</button>
+        <button data-tab="progress">Progress</button>
+  
 
   <!-- Content containers for each tab -->
-  <main>
+  <main
     <section id="plan" class="tab-content active"></section>
     <section id="workout" class="tab-content"></section>
     <section id="diet" class="tab-content"></section>
       
 <section id="renpho" class="tab-content"></section>
+  <section id="meal-plan" class="tab-content"></section>
+    <section id="progress" class="tab-content"></section>
 
-      <section id="meal-plan" class="tab-content"></section>
+  
 
     <section id="sleep" class="tab-content"></section>
     <section id="summary" class="tab-content"></section>
-  </main>
+</main>
+<div id="exercise-detail" class="detail-panel"></div>
+<div id="meal-detail" class="detail-panel"></div>
+
+
+    
 
   <footer>
     <p>Data stored locally on your device. You can clear data from your browser settings.</p>
