Fix navigation markup and sections

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button data-tab="progress">Progress</button>
   
 
+    </nav>
   <!-- Content containers for each tab -->
   <main
     <section id="plan" class="tab-content active"></section>
