--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </nav>
   <!-- Content containers for each tab -->
-  <main
+  <<main>
     <section id="plan" class="tab-content active"></section>
     <section id="workout" class="tab-content"></section>
     <section id="diet" class="tab-content"></section>
